# Globalizer_Benchmarks

./: .gitignore  Benchmarks_utils.cmake  CMakeLists.txt  README.md
.github/workflows/: GlobalizerTest.yml
Interface/include/: GlobalOptimizationProblemManager.h  IGlobalOptimizationProblem.h  InitProblem.h
Interface/src/: GlobalOptimizationProblemManager.cpp  InitProblem.cpp
Problems/X2/: CMakeLists.txt  X2.cpp  X2.h
Problems/iOptProblem/: AirObjectDetectionProblem.py  CMakeLists.txt  Cardio2D.py  DataDownloader.py  ECGClassificationProblem.py  ECGSegmentationProblem.py  Globalizer_problem.py  Globalizer_problem_old.py  Loader.py  OptunaTransformator.py  SVC_3D_Transformator.py  SVC_Fixed_Regularization.py  TestsProblem.py  XGBR_2D_Gasturbine.py  iOptProblem.cpp  iOptProblem.h  problem.py  pymodule_wrapper.cpp  pymodule_wrapper.h  rastrigin.py  requirements.txt
Problems/iOptProblem/ClassificationScripts/: dataset.py
Problems/iOptProblem/ECG/: DataDownloader.py  ECGClassificationProblem.py  ECGSegmentationProblem.py
Problems/iOptProblem/ECG/Optuna/: OptunaECGClassification.py  OptunaECGSegmentation.py
Problems/iOptProblem/ML_Problems/: Cardio2D.py  ECGClassificationProblem.py  MCO_SVC_2D_Transformators_State.py  SVC_2D_Float_Discrete.py  SVC_2D_Transformators_State.py  SVC_3D.py  XGB_3D.py  mco_breast_cancer.py
Problems/iOptProblem/ML_Problems/ClassificationScripts/: model.py
Problems/iOptProblem/MachineLearning/SupportVectorMachines/: SVC_2d.py  SVC_3D.py  SVC_3D_Transformator.py  SVC_Fixed_Kernel.py
Problems/iOptProblem/Tests/: TestsProblem.py  hyperparams.py  iOptSearcher.py  interface.py  metrics.py
Problems/iOptProblemSimple/: CMakeLists.txt  Globalizer_problem.py  iOptProblem.cpp  pymodule_wrapper.cpp  requirements.txt
Problems/python_objective/: CMakeLists.txt  objective_simple.py  pymodule_wrapper.cpp  pymodule_wrapper.h  python_function.cpp  python_function.h
Problems/rastrigin/: CMakeLists.txt  rastrigin_problem.cpp  rastrigin_problem.h
Problems/rastriginC1/: CMakeLists.txt  rastriginC1_problem.cpp  rastriginC1_problem.h
Problems/rastriginC20/: CMakeLists.txt  rastriginC20_problem.cpp  rastriginC20_problem.h
Problems/rastriginInt/: CMakeLists.txt  rastriginInt_problem.cpp  rastriginInt_problem.h
Problems/rastriginUC/: CMakeLists.txt  rastriginUC_problem.cpp  rastriginUC_problem.h
Problems/stronginC3/: CMakeLists.txt  stronginc3_problem.cpp  stronginc3_problem.h
examples/: Main.cpp
tests/: CMakeLists.txt
tests/src/: test_main.cpp  test_problems.cpp
